tests/.nts/error/links_pin_not_assignable2.nts
.chipsets:
input  in
output out

.links:
in:1 out:944162